--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -5,8 +6,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
+  
 
   <body>
+    <div class="navbar">
+      <div><a href="/rock">Play Rock</a></div>
+      <div><a href="/paper">Play Paper</a></div>
+      <div><a href="/scissors">Play Scissors</a></div>
+    </div>
+
     <%= yield %>
+
   </body>
 </html>
